--- a/templates/mainpage/sidebar.html.twig
+++ b/templates/mainpage/sidebar.html.twig
@@ -1,11 +1,11 @@
 {% block sidebar %}
-    <aside class="main-sidebar sidebar-dark-primary elevation-4">
+    <aside class="main-sidebar sidebar-dark-primary elevation-4" style="overflow: auto;">
         <a class="brand-link" href="/">
             <i class="fab fa-facebook-f" style="position:relative; margin-left: 19px; size: 3px; top:3px;"></i>
             <span class="brand-text font-weight-light" style="margin-left: 5px;">Pszemke.App!
             </span>
         </a>
-        <div class="sidebar">
+        <div class="sidebar" style="overflow: auto;">
             <nav class="mt-2">
                 <ul class="nav nav-pills nav-sidebar flex-column" data-accordion="false" data-widget="treeview" role="menu">
                     <!--*********************************************************-->
