--- a/templates/mainpage/footer.html.twig
+++ b/templates/mainpage/footer.html.twig
@@ -1,5 +1,5 @@
 {% block footer %}
-    <footer class="main-footer">
+    <footer class="main-footer" style="margin-top: 5px;">
             Pszemke.App!
     </footer>
 {% endblock %}
