Implemented project for edit quest

--- a/templates/users/show_users.html.twig
+++ b/templates/users/show_users.html.twig
@@ -86,7 +86,7 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="mb-2 modal-body text-center">
-                <h2>Change role</h2>
+                <h2>{% trans %}Zmień rolę{% endtrans %}</h2>
                 <form class="editRole" method="Post" action="">
                     <select class="role_input browser-default custom-select" name="roles" required>
                         <option value="ROLE_ADMIN" selected="">{% trans %}Administrator{% endtrans %}</option>
