--- a/templates/quests/edit_quest.html.twig
+++ b/templates/quests/edit_quest.html.twig
@@ -17,6 +17,16 @@
                             value="{{ minDate }}"
                         {% endif %}
                        required>
+                <div class="mt-3 mb-2">{% trans %}Wybierz lub wprowadź nowy projekt{% endtrans %}:</div>
+                <input class="form-control" list="project" name="Project" pattern=".{3,100}"
+                       title="{% trans %}Nazwa projektu musi zawierać od 3 do 100 znaków.{% endtrans %}">
+                <datalist id="project">
+                    {% if projects is defined %}
+                        {% for project in projects %}
+                            <option value="{{ project.name }}">{{ project.name }}</option>
+                        {% endfor %}
+                    {% endif %}
+                </datalist>
                 <div class="mt-3 mb-2">{% trans %}Wybierz użytkownika{% endtrans %}:</div>
                 <div>
                     <select class="browser-default custom-select" name="user" required>
