--- a/templates/quests/new_quest.html.twig
+++ b/templates/quests/new_quest.html.twig
@@ -4,7 +4,8 @@
         <h1 class="mb-3">{% trans %}Stwórz nowe zadanie{% endtrans %}</h1>
         <div class="mt-3 mb-2">{% trans %}Treść{% endtrans %}:</div>
         <input class="form-control" type="textarea"
-               pattern=".{3,200}" title="{% trans %}Treść zadania musi zawierać od 3 do 200 znaków.{% endtrans %}" name="Content" value="{{ quest.Content }}" required>
+               pattern=".{3,200}" title="{% trans %}Treść zadania musi zawierać od 3 do 200 znaków.{% endtrans %}"
+               name="Content" value="{{ quest.Content }}" required>
         <div class="mt-3 mb-2">{% trans %}Data{% endtrans %}:</div>
         <input class="form-control" type="date" min="{{ minDate }}" max="{{ maxDate }}"
                name="EndDate" required>
@@ -12,11 +13,11 @@
         <input class="form-control" list="project" name="Project" pattern=".{3,100}"
                title="{% trans %}Nazwa projektu musi zawierać od 3 do 100 znaków.{% endtrans %}">
         <datalist id="project">
-            <option value="Internet Explorer">
-            <option value="Firefox">
-            <option value="Google Chrome">
-            <option value="Opera">
-            <option value="Safari">
+            {% if projects is defined %}
+                {% for project in projects %}
+                    <option value="{{ project.name }}">{{ project.name }}</option>
+                {% endfor %}
+            {% endif %}
         </datalist>
         <div class="mt-3 mb-2">{% trans %}Wybierz użytkownika{% endtrans %}:</div>
         <select class="browser-default custom-select" name="user" required>
@@ -24,6 +25,7 @@
                 <option value="{{ user.id }}">{{ user.login }}</option>
             {% endfor %}
         </select>
-        <div class="row"><input class="btn btn-lg btn-secondary mt-4" type="submit" value="{% trans %}Dodaj{% endtrans %}"></div>
+        <div class="row"><input class="btn btn-lg btn-secondary mt-4" type="submit"
+                                value="{% trans %}Dodaj{% endtrans %}"></div>
     </form>
 {% endblock %}
