--- a/templates/quests/new_quest.html.twig
+++ b/templates/quests/new_quest.html.twig
@@ -25,7 +25,10 @@
                 <option value="{{ user.id }}">{{ user.login }}</option>
             {% endfor %}
         </select>
-        <div class="row"><input class="btn btn-lg btn-secondary mt-4" type="submit"
-                                value="{% trans %}Dodaj{% endtrans %}"></div>
+        <div class="mt-3 mb-2">
+            <input class="btn btn-lg btn-secondary" type="submit"
+                   value="{% trans %}Dodaj{% endtrans %}">
+            <button class="btn btn-lg btn-info ml-2" onclick="goBack()">{% trans %}Anuluj{% endtrans %}</button>
+        </div>
     </form>
 {% endblock %}
