--- a/templates/quests/show_one_quest.html.twig
+++ b/templates/quests/show_one_quest.html.twig
@@ -28,8 +28,6 @@
             <button class="btn btn-secondary mt-4 ml-2">{% trans %}Wróć{% endtrans %}</button>
         </a>
     {% elseif is_granted('ROLE_USER') %}
-        <a href="{{ path('show_user_quests', {id: app.user.id}) }}">
-            <button class="btn btn-secondary mt-4 ml-2">{% trans %}Wróć{% endtrans %}</button>
-        </a>
+            <button onclick="goBack()" class="btn btn-secondary mt-4 ml-2">{% trans %}Wróć{% endtrans %}</button>
     {% endif %}
 </div>{% endblock %}
