--- a/templates/mainpage/sidebar.html.twig
+++ b/templates/mainpage/sidebar.html.twig
@@ -128,6 +128,12 @@
                                         <p>{% trans %}Lista postów{% endtrans %}</p>
                                     </a>
                                 </li>
+                                <li class="nav-item archive">
+                                    <a class="nav-link button" href="{{ path('show_all_projects') }}">
+                                        <i class="fa fa-circle-o nav-icon"></i>
+                                        <p>{% trans %}Projekty{% endtrans %}</p>
+                                    </a>
+                                </li>
                             </ul>
                         </li>
                     {% endif %}
