--- a/templates/posts/show_posts.html.twig
+++ b/templates/posts/show_posts.html.twig
@@ -11,7 +11,9 @@
                 <th scope="col">{% trans %}Treść{% endtrans %}</th>
                 <th scope="col">{% trans %}Zarządzanie{% endtrans %}</th>
                 <th scope="col">{% trans %}Usuń{% endtrans %}</th>
-                <th scope="col">{% trans %}Udostępnij{% endtrans %}</th>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <th scope="col">{% trans %}Udostępnij{% endtrans %}</th>
+                {% endif %}
                 <th scope="col">Status</th>
             </tr>
             </thead>
@@ -35,7 +37,8 @@
                             <a class="btn btn-success" href="/post/{{ post.id }}">{% trans %}Pokaż{% endtrans %}</a>
                         </td>
                         <td>
-                            <a class="btn btn-warning" href="/post/edit/{{ post.id }}">{% trans %}Edytuj{% endtrans %}</a>
+                            <a class="btn btn-warning"
+                               href="/post/edit/{{ post.id }}">{% trans %}Edytuj{% endtrans %}</a>
                         </td>
 
                         <td>
@@ -45,13 +48,15 @@
                                 <i class="fas fa-trash-alt"></i>
                             </button>
                         </td>
-                        <td>
-                            <button onclick="get_number(this.id)" class="btn btn-outline-primary"
-                                    id="{{ post.id }}" data-target="#exampleModalCenterSend" data-toggle="modal"
-                                    type="button">
-                                <i class="fas fa-share-alt"></i>
-                            </button>
-                        </td>
+                        {% if is_granted('ROLE_ADMIN') %}
+                            <td>
+                                <button onclick="get_number(this.id)" class="btn btn-outline-primary"
+                                        id="{{ post.id }}" data-target="#exampleModalCenterSend" data-toggle="modal"
+                                        type="button">
+                                    <i class="fas fa-share-alt"></i>
+                                </button>
+                            </td>
+                        {% endif %}
                         <td style="font-size: 25px;">
                             {% if post.status == 1 %}<i style="color: green" class="fas fa-toggle-on"></i>{% else %}<i
                                     style="color: gray" class="fas fa-toggle-off"></i>{% endif %}
