--- a/templates/quests/new_quest.html.twig
+++ b/templates/quests/new_quest.html.twig
@@ -4,13 +4,13 @@
         <h1 class="mb-3">{% trans %}Stwórz nowe zadanie{% endtrans %}</h1>
         <div class="mt-3 mb-2">{% trans %}Treść{% endtrans %}:</div>
         <input class="form-control" type="textarea"
-               pattern=".{3,200}" title="{% trans %}Treść zadania musi zawierać od 3 do 200 znaków.{% endtrans %}"
+               pattern=".{3,200}" required="required" title="{% trans %}Treść zadania musi zawierać od 3 do 200 znaków.{% endtrans %}"
                name="Content" value="{{ quest.Content }}" required>
         <div class="mt-3 mb-2">{% trans %}Data{% endtrans %}:</div>
         <input class="form-control" type="date" min="{{ minDate }}" max="{{ maxDate }}"
                name="EndDate" required>
         <div class="mt-3 mb-2">{% trans %}Wybierz lub wprowadź nowy projekt{% endtrans %}:</div>
-        <input class="form-control" list="project" name="Project" pattern=".{3,100}"
+        <input class="form-control" list="project" name="Project" pattern=".{3,100}" required="required"
                title="{% trans %}Nazwa projektu musi zawierać od 3 do 100 znaków.{% endtrans %}">
         <datalist id="project">
             {% if projects is defined %}
