--- a/templates/users/show_users.html.twig
+++ b/templates/users/show_users.html.twig
@@ -3,49 +3,55 @@
     <h1 style="margin: 25px;">{% trans %}Lista użytkowników{% endtrans %}</h1>
     <table class="table table-striped">
         <thead>
-            <tr>
-                <th scope="col">id</th>
-                <th scope="col">login</th>
-                <th scope="col">e-mail</th>
-                <th scope="col">{% trans %}Rola{% endtrans %}</th>
-                <th scope="col">{% trans %}Zmień{% endtrans %} email</th>
-                <th scope="col">{% trans %}Zmień rolę{% endtrans %}</th>
-                <th scope="col">{% trans %}Usuń{% endtrans %}</th>
-            </tr>
+        <tr>
+            <th scope="col">id</th>
+            <th scope="col">login</th>
+            <th scope="col">e-mail</th>
+            <th scope="col">{% trans %}Rola{% endtrans %}</th>
+            <th scope="col">{% trans %}Zmień{% endtrans %} email</th>
+            <th scope="col">{% trans %}Zmień rolę{% endtrans %}</th>
+            <th scope="col">{% trans %}Usuń{% endtrans %}</th>
+        </tr>
         </thead>
         <tbody>
-            {% for user in users %}
-                <tr>
-                    <th>{{ user.id }}</th>
-                    <td>{{ user.login }}</td>
-                    <td>{{ user.email }}</td>
-                    {% if user.roles[0] == "ROLE_ADMIN" %}
-                        <td>{% trans %}Administrator{% endtrans %}</td>
-                    {% elseif user.roles[0] == "ROLE_USER" %}
-                        <td>{% trans %}Użytkownik{% endtrans %}</td>
-                    {% endif %}
-                    <td>
-                        <a onclick="get_number(this.id, this.getAttribute('data-email'), this.getAttribute('data-role'))"
-                           class="btn btn-warning" id="{{ user.id }}" data-email="{{ user.email }}" data-role="{{ user.roles[0] }}"
-                           data-target="#exampleModalCenterChangeEmail" data-toggle="modal">{% trans %}Zmień{% endtrans %}</a>
-                    </td>
-                    <td>
-                        <a onclick="get_number(this.id, this.getAttribute('data-email'), this.getAttribute('data-role'))"
-                           class="btn btn-warning" id="{{ user.id }}" data-email="{{ user.email }}" data-role="{{ user.roles[0] }}"
-                           data-target="#exampleModalCenterChangeRole" data-toggle="modal">{% trans %}Zmień{% endtrans %}</a>
-                    </td>
-                    <td>
-                        <button onclick="get_number(this.id)" class="btn btn-outline-danger" id="{{user.id}}" data-target="#exampleModalCenterDelete"
-                           data-toggle="modal">
-                            <i class="fas fa-trash-alt"></i>
-                        </button>
-                    </td>
-                </tr>
-            {% endfor %}
+        {% for user in users %}
+            <tr>
+                <th>{{ user.id }}</th>
+                <td>{{ user.login }}</td>
+                <td>{{ user.email }}</td>
+                {% if user.roles[0] == "ROLE_ADMIN" %}
+                    <td>{% trans %}Administrator{% endtrans %}</td>
+                {% elseif user.roles[0] == "ROLE_USER" %}
+                    <td>{% trans %}Użytkownik{% endtrans %}</td>
+                {% endif %}
+                <td>
+                    <a onclick="get_number(this.id, this.getAttribute('data-email'), this.getAttribute('data-role'))"
+                       class="btn btn-warning" id="{{ user.id }}" data-email="{{ user.email }}"
+                       data-role="{{ user.roles[0] }}"
+                       data-target="#exampleModalCenterChangeEmail"
+                       data-toggle="modal">{% trans %}Zmień{% endtrans %}</a>
+                </td>
+                <td>
+                    <a onclick="get_number(this.id, this.getAttribute('data-email'), this.getAttribute('data-role'))"
+                       class="btn btn-warning" id="{{ user.id }}" data-email="{{ user.email }}"
+                       data-role="{{ user.roles[0] }}"
+                       data-target="#exampleModalCenterChangeRole"
+                       data-toggle="modal">{% trans %}Zmień{% endtrans %}</a>
+                </td>
+                <td>
+                    <button onclick="get_number(this.id)" class="btn btn-outline-danger" id="{{ user.id }}"
+                            data-target="#exampleModalCenterDelete"
+                            data-toggle="modal">
+                        <i class="fas fa-trash-alt"></i>
+                    </button>
+                </td>
+            </tr>
+        {% endfor %}
         </tbody>
     </table>
     <!--Delete modal-->
-    <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="exampleModalCenterDelete" role="dialog" tabindex="-1">
+    <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="exampleModalCenterDelete"
+         role="dialog" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-body text-center">
@@ -59,64 +65,72 @@
                     <a class="action" id="/post/delete/">
                         <button class="delete_user btn-lg btn-outline-danger mt-5 mr-2">{% trans %}Usuń{% endtrans %}</button>
                     </a>
-                    <button class="btn-lg btn-outline-secondary mt-5 ml-2" data-dismiss="modal" type="button">{% trans %}Anuluj{% endtrans %}</button>
+                    <button class="btn-lg btn-outline-secondary mt-5 ml-2" data-dismiss="modal"
+                            type="button">{% trans %}Anuluj{% endtrans %}</button>
                 </div>
             </div>
         </div>
     </div>
     <!--Delete modal-->
     <!--Email modal-->
-    <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="exampleModalCenterChangeEmail" role="dialog" tabindex="-1">
+    <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade"
+         id="exampleModalCenterChangeEmail" role="dialog" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-body text-center">
                     <h2>{% trans %}Zmiana e-maila{% endtrans %}</h2>
                     <form class="emailForm" method="Post" action="">
-                        <input type="email" name="email" maxlength="50" class="form-control mt-3" id="exampleInputEmail" aria-describedby="emailHelp" required>
-                    </div>
-                    <button style="width:95%; margin:auto;" class="mt-3 mb-3 btn-lg btn-warning" type="submit">{% trans %}Zapisz zmianę{% endtrans %}</button>
+                        <input type="email" name="email" maxlength="50" class="form-control mt-3" id="exampleInputEmail"
+                               aria-describedby="emailHelp" required>
+                </div>
+                <button style="width:95%; margin:auto;" class="mt-3 mb-3 btn-lg btn-warning"
+                        type="submit">{% trans %}Zapisz zmianę{% endtrans %}</button>
                 </form>
             </div>
         </div>
     </div>
-</div>
-<!--Email modal-->
-<!--Role modal-->
-<div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="exampleModalCenterChangeRole" role="dialog" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="mb-2 modal-body text-center">
-                <h2>{% trans %}Zmień rolę{% endtrans %}</h2>
-                <form class="editRole" method="Post" action="">
-                    <select class="role_input browser-default custom-select" name="roles" required>
-                        <option value="ROLE_ADMIN" selected="">{% trans %}Administrator{% endtrans %}</option>
-                        <option value="ROLE_USER">{% trans %}Użytkownik{% endtrans %}</option>
-                    </select>
+    </div>
+    <!--Email modal-->
+    <!--Role modal-->
+    <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade"
+         id="exampleModalCenterChangeRole" role="dialog" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="mb-2 modal-body text-center">
+                    <h2>{% trans %}Zmień rolę{% endtrans %}</h2>
+                    <form class="editRole" method="Post" action="">
+                        <select class="role_input browser-default custom-select" name="roles" required>
+                            <option value="ROLE_ADMIN" selected="">{% trans %}Administrator{% endtrans %}</option>
+                            <option value="ROLE_USER">{% trans %}Użytkownik{% endtrans %}</option>
+                        </select>
+                        <button style="width:95%; margin:auto;" class="mt-3 mb-3 btn-lg btn-warning"
+                                type="submit">{% trans %}Zapisz zmianę{% endtrans %}</button>
+                    </form>
                 </div>
-                <button style="width:95%; margin:auto;" class="mt-3 mb-3 btn-lg btn-warning" type="submit">{% trans %}Zapisz zmianę{% endtrans %}</button>
-            </form>
+            </div>
         </div>
     </div>
-</div></div><!-- Role modal--><script>
-let number;
-let user_email;
-let user_role;
+    <!-- Role modal-->
+    <script>
+        let number;
+        let user_email;
+        let user_role;
 
-function get_number(clicked_id, email, role) {
-    number = clicked_id;
-    user_email = email;
-    user_role = role;
-    document.querySelector('#exampleInputEmail').placeholder = user_email;
-    document.querySelector('.role_input').value = user_role;
-    document.querySelector('.emailForm').action = "/edit/email/".concat(number);
-    document.querySelector('.editRole').action = "/edit/role/".concat(number);
-}
+        function get_number(clicked_id, email, role) {
+            number = clicked_id;
+            user_email = email;
+            user_role = role;
+            document.querySelector('#exampleInputEmail').placeholder = user_email;
+            document.querySelector('.role_input').value = user_role;
+            document.querySelector('.emailForm').action = "/edit/email/".concat(number);
+            document.querySelector('.editRole').action = "/edit/role/".concat(number);
+        }
 
-document.querySelector(".delete_user").onclick = function () {
-    delete_trigger()
-};
+        document.querySelector(".delete_user").onclick = function () {
+            delete_trigger()
+        };
 
 
-function delete_trigger() {
-    window.location.href = '/user/delete/'.concat(number);
-}</script>{% endblock %}
+        function delete_trigger() {
+            window.location.href = '/user/delete/'.concat(number);
+        }</script>{% endblock %}
