--- a/templates/mainpage/main.html.twig
+++ b/templates/mainpage/main.html.twig
@@ -54,7 +54,7 @@
     </div>
     <!-- Content -->
     <!-- Footer -->
-    {% include 'mainpage/footer.html.twig' %}
+    {#{% include 'mainpage/footer.html.twig' %}#}
     <!-- Footer -->
 </div>
 {% endblock %}
