--- a/templates/quests/show_quests.html.twig
+++ b/templates/quests/show_quests.html.twig
@@ -56,7 +56,7 @@
     <div class="row d-flex justify-content-center w-100 paginator mt-3">
         {{ knp_pagination_render(quests) }}
     </div>
-    <!-- Delete post modal -->
+    <!-- Delete quest modal -->
     <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="exampleModalCenterDelete"
          role="dialog" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered" role="document">
@@ -78,7 +78,7 @@
             </div>
         </div>
     </div>
-    <!-- Delete post modal -->
+    <!-- Delete quest modal -->
     <script>
         let number;
 
