Change project name implemented

--- a/templates/mainpage/sidebar.html.twig
+++ b/templates/mainpage/sidebar.html.twig
@@ -1,5 +1,5 @@
 {% block sidebar %}
-    <aside class="main-sidebar sidebar-dark-primary elevation-4" style="overflow: auto;">
+    <aside class="main-sidebar sidebar-dark-primary elevation-4" style="zzoverflow: auto;">
         <a class="brand-link" href="/">
             <i class="fab fa-facebook-f" style="position:relative; margin-left: 19px; size: 3px; top:3px;"></i>
             <span class="brand-text font-weight-light" style="margin-left: 5px;">Pszemke.App!
