--- a/templates/users/edit_user.html.twig
+++ b/templates/users/edit_user.html.twig
@@ -1,11 +1,16 @@
 {% extends 'mainpage/main.html.twig' %}
 {% block content %}
     <style>
-        label[for=login_form_login]{
-            display:none;
+        label[for=login_form_login] {
+            display: none;
         }
-        label[for=email_form_email]{
-            display:none;
+
+        label[for=email_form_email] {
+            display: none;
+        }
+
+        label[for=avatar_form_name] {
+            display: none;
         }
     </style>
     <div class="container-fluid">
@@ -29,10 +34,13 @@
                         <bold>{% trans %}Edytuj hasło{% endtrans %}:</bold>
                     </h2>
                     {{ form_start(passwordForm) }}
-                    <div class="mt-3"><span style="cursor: default; font-weight: bold;">{% trans %}Hasło{% endtrans %}:</span></div>
+                    <div class="mt-3"><span
+                                style="cursor: default; font-weight: bold;">{% trans %}Hasło{% endtrans %}:</span></div>
                     {{ form_widget(passwordForm.password.first) }}
                     {{ form_errors(passwordForm.password.first) }}
-                    <div class="mt-3"><span style="cursor: default; font-weight: bold;">{% trans %}Powtórz hasło{% endtrans %}:</span></div>
+                    <div class="mt-3"><span
+                                style="cursor: default; font-weight: bold;">{% trans %}Powtórz hasło{% endtrans %}:</span>
+                    </div>
                     {{ form_widget(passwordForm.password.second) }}
                     {{ form_errors(passwordForm.password.second) }}
                     <button class="btn btn-dark mt-4">{% trans %}Edytuj{% endtrans %}</button>
@@ -41,7 +49,7 @@
             </div>
         </div>
         <div class="row mt-3">
-            <div class="col-12">
+            <div class="col-sm-12 col-md-6 mb-3">
                 <div class="form form_edit_user w-95">
                     <h2 class="mb-5">
                         <bold>{% trans %}Edytuj{% endtrans %} e-mail:</bold>
@@ -53,6 +61,103 @@
                     {{ form_end(emailForm) }}
                 </div>
             </div>
+            <div class="col-sm-12 col-md-6 mb-3">
+                <div class="form form_edit_user w-95">
+                    <h2 class="mb-5">
+                        <bold>{% trans %}Edytuj awatar{% endtrans %}:</bold>
+                        {% if avatar is defined %}
+                            <button data-id="{{ app.user.id }}"
+                                    onclick="get_number_delete(this.getAttribute('data-id'))"
+                                    style="float: right;"
+                                    class="btn btn-outline-danger action_post mr-5"
+                                    data-target="#modalDeleteAvatar" data-toggle="modal">
+                                <i class="fas fa-trash-alt"></i>
+                            </button>
+                        {% endif %}
+                    </h2>
+                    <div class="photoSelection">
+                        {% if avatar is defined %}
+                            <div class="chosenImage">
+                                <img id="chosenImage"
+                                     style="height: 8vh; max-width: 100%; margin-top: 5px; margin-bottom: 5px; border: 2px solid gray; border-radius: 5px;"
+                                     src="{{ avatar }}">
+                            </div>
+                        {% endif %}
+                    </div>
+                    <div class="mt-1"><span
+                                style="cursor: default; font-weight: bold;">{% trans %}Wybierz zdjęcie{% endtrans %}:</span>
+                    </div>
+                    {{ form_start(avatarForm) }}
+                    {{ form_widget(avatarForm) }}
+                    {{ form_errors(avatarForm) }}
+                    <button class="btn btn-dark mt-4">{% trans %}Zapisz{% endtrans %}</button>
+                    {{ form_end(avatarForm) }}
+                </div>
+            </div>
         </div>
     </div>
+    <!-- Delete avatar modal -->
+    <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="modalDeleteAvatar"
+         role="dialog" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-body text-center">
+                    <h1>
+                        <i class="far fa-question-circle mt-2"></i>
+                    </h1>
+                    <h2 class="mt-4 mb-3">
+                        <bold>{% trans %}Jesteś pewien{% endtrans %}?</bold>
+                    </h2>
+                    <h5>{% trans %}Czy chcesz usunąć awatar{% endtrans %}?</h5>
+                    <button class="delete btn-lg btn-outline-danger mt-5 mr-2">{% trans %}Usuń{% endtrans %}</button>
+                    <button class="btn-lg btn-outline-secondary mt-5 ml-2" data-dismiss="modal"
+                            type="button">{% trans %}Anuluj{% endtrans %}
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Delete avatar modal -->
+    <script>
+        document.querySelector("#avatar_form_name").setAttribute("onchange", "whenChosen(event)");
+
+        let number_delete;
+
+        function whenChosen(event) {
+            let chosenImage = new FileReader();
+            chosenImage.onload = function () {
+                let photoSel = document.querySelector(".chosenImage");
+
+                if (photoSel === null) {
+                    document.querySelector(".photoSelection").insertAdjacentHTML('beforeend', "<div class=\"chosenImage\">\n" +
+                        "<img id=\"chosenImage\" style=\"height: 8vh; max-width: 100%; margin-top: 5px; margin-bottom: 5px;\">\n" +
+                        "</div>");
+                    let image = document.querySelector("#chosenImage");
+                    image.src = chosenImage.result;
+                    image.style.borderRadius = "5px";
+                    image.style.border = "2px solid gray";
+                } else {
+                    document.querySelector(".chosenImage").innerHTML = "<img id=\"chosenImage\" style=\"height: 8vh; max-width: 100%;" +
+                        " margin-top: 5px; margin-bottom: 5px;\">";
+                    let image = document.querySelector("#chosenImage");
+                    image.src = chosenImage.result;
+                    image.style.borderRadius = "5px";
+                    image.style.border = "2px solid gray";
+                }
+            }
+            chosenImage.readAsDataURL(event.target.files[0]);
+        }
+
+        function get_number_delete(clicked_id) {
+            number_delete = clicked_id;
+        }
+
+        function delete_trigger() {
+            window.location.href = '/avatars/delete/'.concat(number_delete);
+        }
+
+        document.querySelector(".delete").onclick = function () {
+            delete_trigger()
+        };
+    </script>
 {% endblock %}
